--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,9 @@ html,body{
     line-height: 2rem;
     height: 2rem;
     text-align: center;
-    flex-grow: 1;
+    flex:1;
+    /*flex-grow: 1;*/
+    /*flex-shrink:1;*/
     padding:.2rem 0;
     border-left: 2px solid #ccc;
     border-bottom: 2px solid #ccc;
